--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="vendor/bpmn-js/assets/bpmn-js.css" />
   <link rel="stylesheet" href="vendor/bpmn-js/assets/bpmn-font/css/bpmn-embedded.css" />
   <link rel="stylesheet" href="vendor/@bpmn-io/properties-panel/assets/properties-panel.css" />
+  <link rel="stylesheet" href="vendor/bpmn-js-token-simulation/assets/css/bpmn-js-token-simulation.css" />
 
   <link rel="stylesheet" href="app.css" />
 </head>
@@ -56,5 +57,5 @@
     </li>
   </ul>
 
-  <script src="app.js"></script>
+  <script src="./app.js"></script>
 </html>
