--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>bpmn-js properties panel demo</title>
+  <title>bpmn-js -> jiac test</title>
 
   <link rel="stylesheet" href="vendor/bpmn-js/assets/diagram-js.css" />
   <link rel="stylesheet" href="vendor/bpmn-js/assets/bpmn-js.css" />
@@ -48,11 +48,6 @@
     <li>
       <a id="js-download-svg" href title="download as SVG image">
         SVG image
-      </a>
-    </li>
-    <li>
-      <a id="js-log-model" href title="log the underlying js model" class="active">
-        Log model
       </a>
     </li>
   </ul>
