adjustment to button style

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 
   <ul class="buttons">
     <li>
-      download
+      DOWNLOAD
     </li>
     <li>
       <a id="js-download-diagram" href title="download BPMN diagram">
