display an error message, if trying to remove variable with assignment

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,11 @@
       </div>
     </div>
 
-    <div class="canvas" id="js-canvas"></div>
+    <div class="canvas" id="js-canvas">
+      <div class="message error" id="delete-assigned-var">
+        <p></p>
+      </div>
+    </div>
     <div class="properties-panel-parent" id="js-properties-panel"></div>
   </div>
 
@@ -51,6 +55,7 @@
       </a>
     </li>
   </ul>
+</body>
 
   <script src="./app.js"></script>
 </html>
