added base for service and interpreter view, as well as serviceImplementation properties

--- a/src/index.html
+++ b/src/index.html
@@ -31,15 +31,29 @@
         </div>
       </div>
     </div>
-
+    <!-- Canvas -->
     <div class="canvas" id="js-canvas">
       <div class="message error" id="delete-assigned-var">
         <p></p>
       </div>
     </div>
+    <div class="views-container">
+      <!-- Service View -->
+      <div class="properties-panel-parent" id="service-view">
+        <div class="view-label" id="service-view-label">
+          <span>SERVICES</span>
+        </div>
+        <div class="collapsible-content" id="service-view-groups">
+          <button id="addServiceButton">+</button>
+        </div>
+      </div>
+      <!-- Interpreter View -->
+      <div class="properties-panel-parent collapsible-content" id="interpreter-view"></div>
+    </div>
+    <!-- Properties Panel -->
     <div class="properties-panel-parent" id="js-properties-panel"></div>
   </div>
-
+  <!-- Download Buttons -->
   <ul class="buttons">
     <li>
       DOWNLOAD
