fixed initialization of services on import, decided to define new 'vsdt2:parameter' and 'vsdt2:result' properties for easier access

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
           <span>SERVICES</span>
         </div>
         <div class="collapsible-content" id="service-view-groups">
-          <button id="addServiceButton">+</button>
+          <button id="addServiceButton" title="Add service" class="createEntry">+</button>
         </div>
       </div>
       <!-- Interpreter View -->
