first draft for loading services running on local opaca platform

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,7 @@
         </div>
         <div class="collapsible-content" id="service-view-groups">
           <button id="addServiceButton" title="Add service" class="createEntry">+</button>
+          <button id="loadServiceButton" title="Load services" class="createEntry">Load...</button>
         </div>
       </div>
       <!-- Interpreter View -->
