--- a/src/index.html
+++ b/src/index.html
@@ -40,13 +40,23 @@
         <!-- Service View -->
         <div class="properties-panel-parent" id="service-view">
             <div class="view-label" id="service-view-label">
-                <span>SERVICES</span>
-                <button id="addServiceButton" title="Add service" class="view-button">+</button>
-                <button id="loadServiceButton" title="Load services" class="view-button">Load...</button>
-                <button id="toggle-service-view" title="open or collapse" class="view-button">&vellip;</button>
-                <div>
-                    Use Auth
-                    <input type="checkbox" id="useAuthCheckbox" title="Use auth?" class="view-button">
+                <div id="service-view-title">SERVICES</div>
+                <div class="service-header-buttons">
+                    <button id="addServiceButton" title="Add service" class="view-button add-item-button bio-properties-panel-add-entry">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16">
+                            <path fill-rule="evenodd" d="M9 13V9h4a1 1 0 0 0 0-2H9V3a1 1 0 1 0-2 0v4H3a1 1 0 1 0 0 2h4v4a1 1 0 0 0 2 0Z"></path>
+                        </svg>
+                    </button>
+                    <button id="loadServiceButton" title="Load services" class="view-button add-item-button">Load...</button>
+                    <div id="auth-container">
+                        <span id="use-auth-label">Use Auth</span>
+                        <input type="checkbox" id="useAuthCheckbox" title="Use auth?" class="view-button">
+                    </div>
+                    <button id="toggle-service-view" title="open or collapse" class="view-button bio-properties-panel-collapsible-entry-arrow">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bio-properties-panel-arrow-right">
+                            <path fill-rule="evenodd" d="m11.657 8-4.95 4.95a1 1 0 0 1-1.414-1.414L8.828 8 5.293 4.464A1 1 0 1 1 6.707 3.05L11.657 8Z"></path>
+                        </svg>
+                    </button>
                 </div>
             </div>
             <div class="view-label collapsible-content" id="login-label">
