--- a/src/index.html
+++ b/src/index.html
@@ -38,12 +38,11 @@
       </div>
       <!-- Dialog for UserTasks -->
         <dialog id="dynamicInputDialog" class="bpmn-popup">
+            <span id="userTaskDialogIcon" class="bpmn-icon-user"></span>
             <form method="dialog">
                 <div id="dialogMessage"></div>
                 <div id="dialogContent"></div>
-                <div id="dialog-button-container">
-                    <button type="submit" class="bpmn-button">Submit</button>
-                </div>
+                <button id="submit-button" type="submit" class="bpmn-button">Submit</button>
             </form>
         </dialog>
       <div class="views-container">
