--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,7 @@
                 <path fill-rule="evenodd" d="m11.657 8-4.95 4.95a1 1 0 0 1-1.414-1.414L8.828 8 5.293 4.464A1 1 0 1 1 6.707 3.05L11.657 8Z"></path>
               </svg>
             </button>
+            <div id="serviceViewIcon" class="bpmn-icon-service"></div>
             <div id="service-view-label">SERVICES</div>
             <div class="service-header-buttons">
               <!-- Add Service Button -->
