--- a/src/index.html
+++ b/src/index.html
@@ -65,32 +65,12 @@
                 </svg>
               </button>
               <!-- Load Services Button -->
-              <button id="loadServiceButton" title="Load services" class="view-button add-item-button">Load...</button>
-              <!-- Auth Box -->
-              <div id="auth-container">
-                <span id="use-auth-label">Use Auth</span>
-                <input type="checkbox" id="useAuthCheckbox" title="Use authentication?" class="view-button">
-              </div>
+              <button id="load-services-button" title="Load all running services" class="view-button add-item-button">Load services</button>
             </div>
           </div>
-          <div class="view-header collapsible-content" id="login-header">
-            <span>USER</span>
-            <div id="userInfo" class="input-wrapper">
-              <div>
-                Login Location
-                <input type="text" id="loginLocation" value="http://localhost:8000">
-              </div>
-              <div>
-                Username
-                <input type="text" id="loginUsername" placeholder="username">
-              </div>
-              <div>
-                Password
-                <input type="password" id="loginPassword" placeholder="password">
-              </div>
-            </div>
+          <div class="collapsible-content" id="service-view-groups">
+            <div id="empty-services-group"></div>
           </div>
-          <div class="collapsible-content" id="service-view-groups"></div>
         </div>
       </div>
     </div>
