remove static empty-services-group

--- a/src/index.html
+++ b/src/index.html
@@ -83,9 +83,7 @@
               <button id="load-services-button" title="Load all running services" class="view-button add-item-button">Load services</button>
             </div>
           </div>
-          <div class="collapsible-content" id="service-view-groups">
-            <div id="empty-services-group"></div>
-          </div>
+          <div class="collapsible-content" id="service-view-groups"></div>
         </div>
       </div>
     </div>
