restructured and simplified code, added dependency for auto-layouter

--- a/src/index.html
+++ b/src/index.html
@@ -14,17 +14,25 @@
 </head>
 <body>
 
-  <div class="selection-panel" id="js-selection-panel" style="display: none;">
-    <h2>How do you want to model your process?</h2>
-    <button id="model-by-describing">Use process description</button>
-    <button id="model-manually">Model manually</button>
-  </div>
-
   <div class="content with-diagram" id="js-drop-zone">
 
     <div class="message intro">
       <div class="note">
-        Drop BPMN diagram from your desktop or <a id="js-create-diagram" href>create a new diagram</a> to get started.
+        <h2>Welcome to the OPACA BPMN Editor</h2>
+        <p>What do you want to do today?</p>
+        <p>You can drop a BPMN diagram here from your desktop to continue editing.</p>
+        <p>Or you can <a id="js-create-diagram" href>create a new diagram.</a></p>
+        <p>Or describe your process in the text field below and ask an LLM to generate a draft.</p>
+        <div class="prompt-panel" id="js-prompt-panel">
+          <textarea id="process-description" rows="10" cols="50"></textarea>
+          <br>
+          <button id="send-description">Send to LLM</button>
+          <div id="response-message" style="color: red; margin-top:10px;"></div>
+        </div>      
+        <div class="loading-panel" id="js-loading-panel" style="display: none;">
+          <div class="loader"></div>
+          <p><strong>Model generation in progress... please stand by.</strong></p>
+        </div>        
       </div>
     </div>
 
@@ -96,33 +104,6 @@
     </div>
     <!-- Properties Panel -->
     <div class="properties-panel-parent" id="js-properties-panel"></div>
-  </div>
-
-
-  <div class="prompt-panel" id="js-prompt-panel" style="display: none;">
-    <h2>Describe your process here:</h2>
-    <textarea id="process-description" rows="10" cols="50"></textarea>
-    <button id="send-description">Send process description to LLM</button>
-    <div id="response-message" style="color: red; margin-top:10px;"></div>
-  </div>
-
-  <div class="loading-panel" id="js-loading-panel" style="display: none;">
-    <div class="loader"></div>
-    <p>Model generation in progress...</p>
-  </div>
-
-  <div class="feedback-panel" id="js-feedback-panel" style="display: none;">
-    <h2>Provide Feedback to Update Model:</h2>
-    <textarea id="feedback-text" rows="5" cols="100"></textarea>
-    <button id="send-feedback">Send Feedback</button>
-    <button id="no-feedback">No Feedback</button>
-    <div id="feedback-response-message" style="color: red; margin-top: 10px;"></div>
-  </div>
-
-  <div class="layout-prompt-panel" id="js-layout-prompt-panel" style="display: none;">
-    <p>Fix the layout of the diagram?</p>
-    <button id="js-fix-layout">Yes</button>
-    <button id="js-cancel-layout">No, it looks good</button>
   </div>
 
   <!-- Download Buttons -->
