--- a/opaca-bpmn-editor/src/index.html
+++ b/opaca-bpmn-editor/src/index.html
@@ -18,6 +18,7 @@
 
     <div class="message intro">
       <div class="note">
+        <img src="../resources/opaca-logo.png" width="400px">
         <h2>Welcome to the OPACA BPMN Editor</h2>
         <p>What do you want to do today?</p>
         <p>You can drop a BPMN diagram here from your desktop to continue editing.</p>
@@ -33,6 +34,12 @@
           <p><strong>Model generation in progress... please stand by.</strong></p>
         </div>
         <div id="response-message" style="color: red; margin-top:10px;"></div>
+        <div style="font-size: small;">
+          <br><br><br>
+          The BPMN Editor is based on <a href="https://bpmn.io/" target="clear">BPMN.io</a>, adapted and extended by Cedric Braun.
+          <br>
+          The LLM Integration is based on <a href="https://promoai.streamlit.app/" target="clear">ProMoAI</a>, adapted by Anastasiia Zubenko.
+        </div>
       </div>
     </div>
 
