--- a/opaca-bpmn-editor/src/index.html
+++ b/opaca-bpmn-editor/src/index.html
@@ -24,6 +24,7 @@
         <p>You can drop a BPMN diagram here from your desktop to continue editing.</p>
         <p>Or you can <a id="js-create-diagram" href>create a new diagram.</a></p>
         <p>Or describe your process in the text field below and ask an LLM to generate a draft.</p>
+        <p>For Example:<br><i>Please create a simple process for applying for vacation days.</i></p>
         <div class="prompt-panel" id="js-prompt-panel">
           <textarea id="process-description" rows="10" cols="50"></textarea>
           <br>
