--- a/opaca-bpmn-editor/src/index.html
+++ b/opaca-bpmn-editor/src/index.html
@@ -62,6 +62,7 @@
         <textarea id="process-feedback-description" rows="10" cols="50"></textarea>
         <br>
         <button id="send-feedback">Send to LLM</button>
+        <button id="cancel-feedback">Cancel</button>
       </div>
       <div class="loading-panel" id="js-feedback-loading-panel">
         <div class="loader"></div>
