only show feedback button with llm backend

--- a/opaca-bpmn-editor/src/index.html
+++ b/opaca-bpmn-editor/src/index.html
@@ -134,9 +134,9 @@
     </div>
     <!-- Properties Panel -->
     <div class="properties-panel-parent" id="js-properties-panel"></div>
-    <button id="feedback-button">Refine diagram</button>
   </div>
-
+  <!-- LLM Feedback Button -->
+  <button id="feedback-button" class="llm-backend-present buttons">Refine diagram</button>
   <!-- Download Buttons -->
   <ul class="buttons">
     <li>
