Add version and build info to landing page

--- a/opaca-bpmn-editor/src/index.html
+++ b/opaca-bpmn-editor/src/index.html
@@ -51,6 +51,8 @@
           The BPMN Editor is based on <a href="https://bpmn.io/" target="clear">BPMN.io</a>, adapted and extended by Cedric Braun.
           <br>
           The LLM Integration is based on <a href="https://promoai.streamlit.app/" target="clear">ProMoAI</a>, adapted by Anastasiia Zubenko.
+          <br><br>
+          <footer id="version-info"></footer>
         </div>
       </div>
     </div>
