added parameter whether to add extensions and a second button

--- a/opaca-bpmn-editor/src/index.html
+++ b/opaca-bpmn-editor/src/index.html
@@ -39,7 +39,8 @@
         <div class="prompt-panel llm-backend-present" id="js-prompt-panel">
           <textarea id="process-description" rows="10" cols="50"></textarea>
           <br>
-          <button id="send-description">Send to LLM</button>
+          <button id="send-description-plain">Generate plain BPMN</button>
+          <button id="send-description-extension">Generate BPMN with Extensions (experimental)</button>
         </div>
         <div class="loading-panel" id="js-loading-panel" style="display: none;">
           <div class="loader"></div>
